--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -5,7 +5,8 @@ scikit-learn==1.3.0
 pandas==2.1.0
 numpy==1.24.3
 pillow==10.1.0
-torch==2.1.0
-torchvision==0.16.0
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+torch==2.2.0+cpu
+torchvision==0.17.0+cpu
 transformers==4.35.0
 sentence-transformers==2.2.2
