--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -1,9 +1,9 @@
-flask==3.0.0
 flask-cors==4.0.0
-gunicorn==21.2.0
-scikit-learn==1.3.0
-pandas==2.1.0
-numpy==1.24.3
+numpy>=2.0.0
+scikit-learn>=1.4.0
+flask
+gunicorn
+pandas
 pillow==10.1.0
 --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
 torch==2.2.0+cpu
